[#676] modified CRD's to fix scorecard test issues

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -247,6 +247,10 @@ spec:
       displayName: ActiveMQ Artemis Address
       kind: ActiveMQArtemisAddress
       name: activemqartemisaddresses.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       specDescriptors:
       - description: The Address Name
         displayName: Address Name
@@ -425,18 +429,30 @@ spec:
       displayName: Active MQArtemis Address
       kind: ActiveMQArtemisAddress
       name: activemqartemisaddresses.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha1
     - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
         API
       displayName: Active MQArtemis Address
       kind: ActiveMQArtemisAddress
       name: activemqartemisaddresses.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha2
     - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
         API
       displayName: Active MQArtemis Address
       kind: ActiveMQArtemisAddress
       name: activemqartemisaddresses.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha3
     - description: A stateful deployment of one or more brokers
       displayName: ActiveMQ Artemis
@@ -1390,26 +1406,46 @@ spec:
       displayName: Active MQArtemis
       kind: ActiveMQArtemis
       name: activemqartemises.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha1
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
       kind: ActiveMQArtemis
       name: activemqartemises.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha2
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
       kind: ActiveMQArtemis
       name: activemqartemises.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha3
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
       kind: ActiveMQArtemis
       name: activemqartemises.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha4
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
       kind: ActiveMQArtemis
       name: activemqartemises.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       version: v2alpha5
     - description: ActiveMQArtemisScaledown is the Schema for the activemqartemisscaledowns
         API
@@ -1422,9 +1458,13 @@ spec:
       displayName: Active MQArtemis Scaledown
       kind: ActiveMQArtemisScaledown
       name: activemqartemisscaledowns.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       specDescriptors:
       - description: Triggered by main ActiveMQArtemis CRD messageMigration entry
-        displayName: Local Only
+        displayName: Temporary
         path: localOnly
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
@@ -1433,6 +1473,10 @@ spec:
       displayName: ActiveMQ Artemis Security
       kind: ActiveMQArtemisSecurity
       name: activemqartemissecurities.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       specDescriptors:
       - description: Apply this security config to the broker crs in the current namespace.
           A value of * or empty string means applying to all broker crs. Default apply
@@ -1951,6 +1995,10 @@ spec:
       displayName: ActiveMQ Artemis Security
       kind: ActiveMQArtemisSecurity
       name: activemqartemissecurities.broker.amq.io
+      resources:
+      - kind: Secret
+        name: ""
+        version: v1
       specDescriptors:
       - description: Apply this security config to the broker crs in the current namespace.
           A value of * or empty string means applying to all broker crs. Default apply
@@ -2572,7 +2620,7 @@ spec:
                       fieldPath: metadata.annotations['olm.targetNamespaces']
                 - name: ENABLE_WEBHOOKS
                   value: "false"
-                image: quay.io/msarawan/operator:1.0.14
+                image: quay.io/artemiscloud/activemq-artemis-operator:1.0.15
                 livenessProbe:
                   httpGet:
                     path: /healthz
