--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -17,5 +17,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/msarawan/operator
-  newTag: 1.0.14
+  newName: quay.io/artemiscloud/activemq-artemis-operator
+  newTag: 1.0.15
