--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,3 +89,32 @@ jobs:
           docker push quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME-bundle:$IMAGE_TAG &&
           docker tag $IMAGE_NAME-bundle:latest quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME-bundle:latest &&
           docker push quay.io/${{ secrets.QUAY_NAMESPACE }}/$IMAGE_NAME-bundle:latest
+
+      - name: Create GitHub release
+        run: |
+          RELEASE_TAG="$(git describe --exact-match --tags)"
+
+          RELEASE_ID=$(curl -v -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.BOT_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" "https://api.github.com/repos/${{ github.repository }}/releases/tags/${RELEASE_TAG}" | jq -r '.id')
+
+          if [ -n "$RELEASE_ID" ]; then
+            curl -v -L -X DELETE -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.BOT_TOKEN }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" "https://api.github.com/repos/${{ github.repository }}/releases/${RELEASE_ID}"
+          fi
+
+          RELEASE_ID=$(curl -v -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.BOT_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" "https://api.github.com/repos/${{ github.repository }}/releases" \
+            -d "$(jq -c -n --arg tag_name "${RELEASE_TAG}" '{"tag_name":$tag_name,"generate_release_notes":true}')" | jq -r '.id')
+
+          RELEASE_PACKAGE="activemq-artemis-operator-${RELEASE_TAG}"
+          rm -rf /tmp/${RELEASE_PACKAGE}
+          mkdir -p /tmp/${RELEASE_PACKAGE}
+          cp -r deploy/* /tmp/${RELEASE_PACKAGE}
+          cp -r config/crs /tmp/${RELEASE_PACKAGE}
+          cp -r examples /tmp/${RELEASE_PACKAGE}
+          cd /tmp/${RELEASE_PACKAGE}
+          zip -r /tmp/${RELEASE_PACKAGE}.zip .
+
+          curl -v -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.BOT_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" -H "Content-Type: application/octet-stream" \
+            "https://uploads.github.com/repos/${{ github.repository }}/releases/${RELEASE_ID}/assets?name=${RELEASE_PACKAGE}.zip" --data-binary "@/tmp/${RELEASE_PACKAGE}.zip"
