[#704] Improve operator logging
* All loggers come from ctrl.Log which is initiated/configured in main.go
* Each logger is given a proper name - each controller has a logger with its owned CRD name as its name.
   all util like methods use package specific logger from ctrl.Log.WithName()
* Log messages are at level 0, 1, or error
* Operator default log level is set to error

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2570,7 +2570,7 @@ spec:
             spec:
               containers:
               - args:
-                - --zap-log-level=info
+                - --zap-log-level=error
                 - --zap-encoder=console
                 - --zap-time-encoding=iso8601
                 - --leader-elect
