--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - args:
-        - --zap-log-level=info
+        - --zap-log-level=error
         - --zap-encoder=console
         - --zap-time-encoding=iso8601
         - --leader-elect
