--- a/bundle/manifests/broker.amq.io_activemqartemissecurities.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemissecurities.yaml
@@ -888,6 +888,9 @@ spec:
                           keyStoreProvider:
                             description: The keystore provider for management connector
                             type: string
+                          keyStoreType:
+                            description: The keystore type for management connector
+                            type: string
                           objectName:
                             description: The JMX object name of management
                             type: string
@@ -913,6 +916,9 @@ spec:
                             type: string
                           trustStoreProvider:
                             description: The truststore provider for management connector
+                            type: string
+                          trustStoreType:
+                            description: The truststore type for management connector
                             type: string
                         type: object
                       hawtioRoles:
