--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,9 @@ jobs:
 
     steps:
       - name: Install prerequisites
-        run: sudo apt-get install pass
+        run: >
+          sudo apt-get update &&
+          sudo apt-get install pass
 
       - name: Checkout the repo
         uses: actions/checkout@v3
