--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -31,6 +31,8 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - command:
         - /home/activemq-artemis-operator/bin/entrypoint
@@ -66,6 +68,11 @@ spec:
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          seccompProfile:
+            type: RuntimeDefault
         livenessProbe:
           httpGet:
             path: /healthz
