[#780] Add label name to operator deployment selector
The label control-plane:controller-manager automatically added by
the operator-sdk is very common so it is not sufficient to select
the operator pod safely.

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2578,6 +2578,7 @@ spec:
           selector:
             matchLabels:
               control-plane: controller-manager
+              name: activemq-artemis-operator
           strategy:
             rollingUpdate:
               maxSurge: 1
