--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -16,6 +16,7 @@ spec:
   selector:
     matchLabels:
       control-plane: controller-manager
+      name: activemq-artemis-operator
   replicas: 1
   strategy:
     rollingUpdate:
