--- a/deploy/activemq-artemis-operator.yaml
+++ b/deploy/activemq-artemis-operator.yaml
@@ -4979,6 +4979,7 @@ spec:
   selector:
     matchLabels:
       control-plane: controller-manager
+      name: activemq-artemis-operator
   strategy:
     rollingUpdate:
       maxSurge: 1
