--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -9,6 +9,7 @@ spec:
   selector:
     matchLabels:
       control-plane: controller-manager
+      name: activemq-artemis-operator
   strategy:
     rollingUpdate:
       maxSurge: 1
