[#780] Add label name to operator deployment selector
The label control-plane:controller-manager automatically added by
the operator-sdk is very common so it is not sufficient to select
the operator pod safely.

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -12,6 +12,7 @@ metadata:
   namespace: system
   labels:
     control-plane: controller-manager
+    name: activemq-artemis-operator
 spec:
   selector:
     matchLabels:
