--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   labels:
     control-plane: controller-manager
+    name: activemq-artemis-operator
   name: activemq-artemis-controller-manager
 spec:
   replicas: 1
