--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2572,6 +2572,7 @@ spec:
       deployments:
       - label:
           control-plane: controller-manager
+          name: activemq-artemis-operator
         name: activemq-artemis-controller-manager
         spec:
           replicas: 1
