[#784] Remove release tag prefix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,6 @@ env:
   IMAGE_NAME: activemq-artemis-operator
 
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_dispatch:
 
 jobs:
@@ -27,7 +24,7 @@ jobs:
         run: |
           git fetch --tags --force
           HEAD_COMMIT="$(git rev-parse HEAD)"
-          RELEASE_TAG="v$(grep -m 1 -oP '(?<=Version = ")[^"]+' version/version.go)"
+          RELEASE_TAG="$(grep -m 1 -oP '(?<=Version = ")[^"]+' version/version.go)"
           RELEASE_TAG_COMMIT="$(git rev-list -n 1 ${RELEASE_TAG} || true)"
           if [ "$RELEASE_TAG_COMMIT" != "$HEAD_COMMIT" ]; then
             git config user.name 'artemiscloud-bot'
